# contextSense

./: .env.example  .gitignore  PROGRESS.md  README.md
backend/: README.md  __init__.py  main.py  pipeline.py  pyproject.toml
backend/agents/: analyst.py  critic.py  orchestrator.py  predictor.py  retriever.py
backend/api/: routes.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/backtest/: __init__.py  fill_outcomes.py  report.py
backend/ingestion/: ingest.py
backend/mcp_clients/: notion_mcp_client.py  test_notion.py
backend/schemas/: __init__.py  critic_verdict.py  event.py  prediction.py  retrieved_chunk.py  run_log.py
backend/schemas/migrations/: 001_create_run_logs.sql  002_add_reasoning_and_critic_flags.sql  003_add_indicators_and_events.sql
backend/tests/: test_main.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/backtest/: page.tsx
frontend/src/app/ticker/[symbol]/: page.tsx
frontend/src/components/: Navbar.tsx
infra/: docker-compose.yml
