[project]
name = "backend"
version = "0.1.0"
description = "ContextSense FastAPI Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.4",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.40.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "langgraph>=0.1.0",
    "pandas>=2.0.0",
    "google-genai>=0.1.0",
    "asyncpg>=0.29.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.2",
    "httpx>=0.27.0",
]

[tool.setuptools]
packages = ["backend"]

[tool.setuptools.package-dir]
backend = "."

